[gd_scene load_steps=8 format=3 uid="uid://1fpf5yybln37"]

[ext_resource type="Script" path="res://principal/cenas/scripts/Play.gd" id="1_qpmne"]
[ext_resource type="PackedScene" uid="uid://breiq50cu5612" path="res://principal/cenas/BG.tscn" id="2_8138u"]
[ext_resource type="Theme" uid="uid://dt5djib7huxvm" path="res://principal/recursos/themes/ButtonTheme.tres" id="6_wxsur"]
[ext_resource type="Script" path="res://principal/cenas/scripts/TranslatableText.gd" id="7_hwa0h"]
[ext_resource type="Script" path="res://principal/cenas/scripts/PressableButton.gd" id="8_ttu2n"]
[ext_resource type="Theme" uid="uid://v3d547aawndh" path="res://principal/recursos/themes/BodyTheme.tres" id="10_rybv5"]
[ext_resource type="Script" path="res://principal/cenas/scripts/TransitionButton.gd" id="10_ukb4k"]

[node name="Play" type="Node2D"]
script = ExtResource("1_qpmne")

[node name="BG" parent="." instance=ExtResource("2_8138u")]

[node name="Play" type="Button" parent="."]
offset_left = 1534.0
offset_top = 16.0
offset_right = 1918.0
offset_bottom = 118.0
theme = ExtResource("6_wxsur")
text = "JOGAR"
flat = true
script = ExtResource("8_ttu2n")
translation_code = "play"

[node name="Menu" type="Button" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 400.0
offset_bottom = 118.0
theme = ExtResource("6_wxsur")
text = "VOLTAR"
flat = true
script = ExtResource("10_ukb4k")
path = "res://principal/cenas/Menu.tscn"
translation_code = "back"

[node name="Explanation" type="RichTextLabel" parent="."]
clip_contents = false
offset_top = 1011.0
offset_right = 1920.0
offset_bottom = 1064.0
theme = ExtResource("6_wxsur")
bbcode_enabled = true
text = "[center]Defina suas configurações e aperte jogar!"
fit_content = true
script = ExtResource("7_hwa0h")
translation_code = "play_explanation"
center_text = true

[node name="Checkboxes" type="HBoxContainer" parent="."]
offset_top = 293.0
offset_right = 1920.0
offset_bottom = 911.0
theme = ExtResource("6_wxsur")
theme_override_constants/separation = 20
alignment = 1

[node name="Modifier" type="VBoxContainer" parent="Checkboxes"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2

[node name="Modifiers" type="RichTextLabel" parent="Checkboxes/Modifier"]
clip_contents = false
layout_mode = 2
theme = ExtResource("6_wxsur")
bbcode_enabled = true
text = "[center]Modifiers"
fit_content = true
script = ExtResource("7_hwa0h")
translation_code = "modifiers"
center_text = true

[node name="Control" type="Control" parent="Checkboxes/Modifier"]
clip_contents = true
custom_minimum_size = Vector2(0, 510)
layout_mode = 2

[node name="ModifierButtons" type="ScrollContainer" parent="Checkboxes/Modifier/Control"]
clip_contents = false
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 480.0
theme = ExtResource("10_rybv5")
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Checkboxes/Modifier/Control/ModifierButtons"]
layout_mode = 2
theme = ExtResource("6_wxsur")

[node name="Minigames" type="VBoxContainer" parent="Checkboxes"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2

[node name="Minigames" type="RichTextLabel" parent="Checkboxes/Minigames"]
clip_contents = false
layout_mode = 2
theme = ExtResource("6_wxsur")
bbcode_enabled = true
text = "[center]Minigames"
fit_content = true
script = ExtResource("7_hwa0h")
translation_code = "minigames"
center_text = true

[node name="Control" type="Control" parent="Checkboxes/Minigames"]
clip_contents = true
custom_minimum_size = Vector2(0, 510)
layout_mode = 2

[node name="MinigamesButtons" type="ScrollContainer" parent="Checkboxes/Minigames/Control"]
clip_contents = false
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 480.0
theme = ExtResource("10_rybv5")
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Checkboxes/Minigames/Control/MinigamesButtons"]
layout_mode = 2
theme = ExtResource("6_wxsur")

[node name="Filters" type="VBoxContainer" parent="Checkboxes"]
custom_minimum_size = Vector2(610, 0)
layout_mode = 2
theme = ExtResource("6_wxsur")

[node name="Filters" type="RichTextLabel" parent="Checkboxes/Filters"]
clip_contents = false
layout_mode = 2
theme = ExtResource("6_wxsur")
bbcode_enabled = true
text = "[center]Filters
"
fit_content = true
scroll_active = false
script = ExtResource("7_hwa0h")
translation_code = "filters"
center_text = true

[node name="Control" type="Control" parent="Checkboxes/Filters"]
clip_contents = true
custom_minimum_size = Vector2(0, 510)
layout_mode = 2

[node name="FilterButtons" type="ScrollContainer" parent="Checkboxes/Filters/Control"]
clip_contents = false
layout_mode = 2
offset_left = 20.0
offset_top = 20.0
offset_right = 580.0
offset_bottom = 480.0
theme = ExtResource("10_rybv5")
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Checkboxes/Filters/Control/FilterButtons"]
layout_mode = 2
theme = ExtResource("6_wxsur")

[connection signal="pressed" from="Play" to="." method="play"]
